# impg-sim

./: README.md  g4anticompton.C  g4coin.C  g4hist.C  g4radware.C  g4reso.C  gate2set.txt  run_simulation.sh  test.ipynb
Ana_ipynb/: Ana_Anticompton.ipynb  Ana_Coin.ipynb  Ana_Raw.ipynb  Ana_Reso.ipynb
Ana_ipynb/.ipynb_checkpoints/: Ana_Anticompton-checkpoint.ipynb  Ana_Coin-checkpoint.ipynb  Ana_Raw-checkpoint.ipynb
anaBa133/: Ana.ipynb  Resolution.ipynb
anaBa133/.ipynb_checkpoints/: Ana-checkpoint.ipynb  Resolution-checkpoint.ipynb
anaGa65/: Ana.ipynb  z31.a65
anaGa65/.ipynb_checkpoints/: Ana-checkpoint.ipynb
anaGa67/: Ana.ipynb  z31.a67
anaZn64/: Ana.ipynb
geant4/: CMakeLists.txt  main.cc  make.sh
geant4/include/: ActionInitialization.hh  CADMesh.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
geant4/model/: BGO_1-1.STL  BGO_1-2.STL  BGO_1-3.STL  BGO_1-4.STL  BGO_2-2.STL  BGO_2-4.STL  BGO_2-6.STL  BGO_2-8.STL  BGO_3-1.STL  BGO_3-2.STL  BGO_3-3.STL  BGO_3-4.STL  BGO_3-5.STL  BGO_3-6.STL  BGO_3-7.STL  BGO_3-8.STL  BGO_4-1.STL  BGO_4-3.STL  BGO_4-5.STL  BGO_4-7.STL  BGO_5-1.STL  BGO_5-2.STL  BGO_5-3.STL  BGO_5-4.STL  CsI_3-1.STL  CsI_3-2.STL  CsI_3-3.STL  CsI_3-4.STL  CsI_3-5.STL  CsI_3-6.STL  CsI_3-7.STL  CsI_3-8.STL  Ge_1-1.STL  Ge_1-2.STL  Ge_1-3.STL  Ge_1-4.STL  Ge_2-2.STL  Ge_2-4.STL  Ge_2-6.STL  Ge_2-8.STL  (+16 more)
geant4/scripts/: geant4.in
geant4/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc
